# pmc

./: .gitignore  CMakeLists.txt  Makefile  README.md  libpmc_test.cpp  pmcConfig.cmake
include/: CMakeLists.txt  libpmc.h  pmc.h  pmc_headers.h  pmc_input.h  pmc_vertex.h
src/: CMakeLists.txt  pmc_clique_utils.cpp  pmc_heu.cpp  pmc_lib.cpp  pmcx_maxclique.cpp
